NEXUS-8092: replacement IT support based on Pax-Exam

--- a/buildsupport/goodies/pom.xml
+++ b/buildsupport/goodies/pom.xml
@@ -28,7 +28,7 @@
   <packaging>pom</packaging>
 
   <properties>
-    <goodies.version>1.12</goodies.version>
+    <goodies.version>1.13-SNAPSHOT</goodies.version>
   </properties>
 
   <dependencyManagement>
