--- a/testsupport/pom.xml
+++ b/testsupport/pom.xml
@@ -33,6 +33,7 @@
     <module>nexus-testsuite-support</module>
     <module>nexus-it-helper-plugin</module>
     <module>nexus-ldap-testsupport</module>
+    <module>nexus-pax-exam</module>
   </modules>
 
   <dependencyManagement>
