--- a/pom.xml
+++ b/pom.xml
@@ -326,6 +326,12 @@
 
       <dependency>
         <groupId>org.sonatype.nexus</groupId>
+        <artifactId>nexus-pax-exam</artifactId>
+        <version>3.0.0-SNAPSHOT</version>
+      </dependency>
+
+      <dependency>
+        <groupId>org.sonatype.nexus</groupId>
         <artifactId>nexus-it-helper-plugin</artifactId>
         <version>3.0.0-SNAPSHOT</version>
       </dependency>
@@ -625,6 +631,23 @@
               <id>xstream</id>
             </excludedArtifactIds>
           </configuration>
+        </plugin>
+
+        <!--
+        Generate Pax-Exam test-dependency XML.
+        -->
+        <plugin>
+          <groupId>org.apache.servicemix.tooling</groupId>
+          <artifactId>depends-maven-plugin</artifactId>
+          <version>1.2</version>
+          <executions>
+            <execution>
+              <id>generate-depends-file</id>
+              <goals>
+                <goal>generate-depends-file</goal>
+              </goals>
+            </execution>
+          </executions>
         </plugin>
 
         <plugin>
@@ -1194,6 +1217,19 @@
                       </pluginExecutionFilter>
                       <action>
                         <ignore/>
+                      </action>
+                    </pluginExecution>
+                    <pluginExecution>
+                      <pluginExecutionFilter>
+                        <groupId>org.apache.servicemix.tooling</groupId>
+                        <artifactId>depends-maven-plugin</artifactId>
+                        <versionRange>[1.2,)</versionRange>
+                        <goals>
+                          <goal>generate-depends-file</goal>
+                        </goals>
+                      </pluginExecutionFilter>
+                      <action>
+                        <execute/>
                       </action>
                     </pluginExecution>
                   </pluginExecutions>
