--- a/assemblies/karaf-nexus-branding/pom.xml
+++ b/assemblies/karaf-nexus-branding/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.sonatype.nexus.assemblies</groupId>
     <artifactId>nexus-assemblies</artifactId>
-    <version>3.0.0-b2015061001</version>
+    <version>3.0.0-SNAPSHOT</version>
   </parent>
 
   <!--
