--- a/plugins/pom.xml
+++ b/plugins/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.sonatype.nexus</groupId>
     <artifactId>nexus-oss</artifactId>
-    <version>3.0.0-b2015061001</version>
+    <version>3.0.0-SNAPSHOT</version>
   </parent>
 
   <groupId>org.sonatype.nexus.plugins</groupId>
@@ -59,7 +59,7 @@
         <groupId>org.sonatype.nexus.buildsupport</groupId>
         <artifactId>nexus-buildsupport-all</artifactId>
         <type>pom</type>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
         <scope>import</scope>
       </dependency>
 
@@ -70,7 +70,7 @@
       <dependency>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-capabilities-testsuite-plugin</artifactId>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <!-- logging -->
@@ -78,7 +78,7 @@
       <dependency>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-logging-plugin</artifactId>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <!-- webresources -->
@@ -86,7 +86,7 @@
       <dependency>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-webresources-plugin</artifactId>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <!-- kenai -->
@@ -94,7 +94,7 @@
       <dependency>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-kenai-plugin</artifactId>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <!-- ldap -->
@@ -102,7 +102,7 @@
       <dependency>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-ldap-plugin</artifactId>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <!-- rutauth -->
@@ -110,7 +110,7 @@
       <dependency>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-rutauth-plugin</artifactId>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <!-- ssl -->
@@ -118,7 +118,7 @@
       <dependency>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-ssl-plugin</artifactId>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <!-- quartz -->
@@ -126,7 +126,7 @@
       <dependency>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-quartz-plugin</artifactId>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <!-- rapture -->
@@ -134,25 +134,25 @@
       <dependency>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-rapture-baseapp</artifactId>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-rapture-plugin</artifactId>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-coreui-plugin</artifactId>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-extdirect-plugin</artifactId>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <!-- siesta -->
@@ -160,7 +160,7 @@
       <dependency>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-siesta-plugin</artifactId>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <!-- atlas -->
@@ -168,7 +168,7 @@
       <dependency>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-atlas-plugin</artifactId>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <!-- timeline -->
@@ -176,7 +176,7 @@
       <dependency>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-timeline-plugin</artifactId>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <!-- wonderland -->
@@ -184,7 +184,7 @@
       <dependency>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-wonderland-plugin</artifactId>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <!-- cma -->
@@ -192,25 +192,25 @@
       <dependency>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-repository-httpbridge</artifactId>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-repository-nuget</artifactId>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-repository-maven</artifactId>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
       <dependency>
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-repository-raw</artifactId>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
       </dependency>
 
     </dependencies>
