--- a/testsuite/pom.xml
+++ b/testsuite/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>org.sonatype.nexus</groupId>
     <artifactId>nexus-oss</artifactId>
-    <version>3.0.0-b2015061001</version>
+    <version>3.0.0-SNAPSHOT</version>
   </parent>
 
   <groupId>org.sonatype.nexus.testsuite</groupId>
@@ -49,7 +49,7 @@
         <groupId>org.sonatype.nexus.buildsupport</groupId>
         <artifactId>nexus-buildsupport-all</artifactId>
         <type>pom</type>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
         <scope>import</scope>
       </dependency>
 
@@ -57,7 +57,7 @@
         <groupId>org.sonatype.nexus.plugins</groupId>
         <artifactId>nexus-plugins</artifactId>
         <type>pom</type>
-        <version>3.0.0-b2015061001</version>
+        <version>3.0.0-SNAPSHOT</version>
         <scope>import</scope>
       </dependency>
 
